<resources>
    <string name="app_name">Word Memorizer</string>
    <string name="word_memorizer">Запоминалка слов</string>
    <string name="action_settings">Настройки</string>
    <string name="search">ПОИСК</string>
    <string name="show_record">показать</string>
    <string name="edit_record">редактировать</string>
    <string name="add_record">добавить</string>
    <string name="delete_record">удалить</string>
    <string name="rename_category">переименовать категорию</string>
    <string name="new_category_name">новое имя категории</string>
    <string name="categories">Категории</string>
    <string name="english_word">английское слово</string>
    <string name="transcription">транскрипция</string>
    <string name="translate">русский перевод</string>
    <string name="success">Урок успешно пройден. Можно выбрать другую категорию.</string>
    <string name="save">сохранить</string>
    <string name="dictionary">Словарь</string>
    <string name="data">Загрузка/выгрузка слов</string>
    <string name="learning">обучение</string>
    <string name="location">Путь</string>
    <string name="cant_read_folder">нельзя открыть директорию!</string>
    <string name="nnew">Новый</string>
    <string name="select">Выбрать</string>
    <string name="file_name">Имя файла:</string>
    <string name="cancel">Отмена</string>
    <string name="create">Сохранить</string>
    <string name="no_data">Нет данных</string>
    <string name="help">Помощь</string>
    <string name="download_file">Загрузка слов из файла</string>
    <string name="upload_file">Выгрузка слов в файл</string>
    <string name="path_file">Путь к файлу</string>
    <string name="file">файл</string>
    <string name="delete_data">удалить существующие слова</string>
    <string name="semicolon_row">- разделитель для столбцов</string>
    <string name="semicolon">;</string>
    <string name="only_chose_category">только слова выбранных категорий</string>
    <string name="download_data">загрузить слова</string>
    <string name="downloading">идет загрузка...</string>
    <string name="upload_data">выгрузить слова</string>
    <string name="uploading">идет выгрузка...</string>
    <string name="amount_load_rows">Количество загруженных из файла строк</string>
    <string name="not_load_rows">Не загрузились строки № </string>
    <string name="amount_not_load_rows">Количество не загруженных строк</string>
    <string name="must_be_utf8">Для правильного отображения символов у текстового файла кодировка желательна UTF-8.</string>
    <string name="template_in_help">Описание шаблона текстового файла см. в справке.</string>
    <string name="file_not_fit_template">Файл не соответствует шаблону.</string>
    <string name="spinner_xls">файл-excel (xls)</string>
    <string name="spinner_txt">текстовый файл</string>
    <string name="spinner_title">текстовый файл</string>
    <string name="choose_file">Нужно выбрать файл.</string>
    <string name="file_dialog">Выбор файла</string>
    <string name="view">просмотр</string>
    <string name="edit">редактирование</string>
    <string name="word_is_deleted">слово удалено</string>
    <string name="deleted">Удалено</string>
    <string name="words_in_categories"> слов в выбранных категориях</string>
    <string name="word_is_changed">слово изменено</string>
    <string name="word_is_added">слово добавлено</string>
    <string name="empty_delimiter">Поле с разделителем должно быть заполнено.</string>
    <string name="amount_save_rows">Количество сохраненных в файле строк</string>
    <string name="failed_download">Данные не выгружены в файл</string>
    <string name="android_version23_rescription">Внимание! Текущая версия Android не позволяет сохранить файл на внешнюю SD Card (sdcard1). Файл нужно сохранить на внутренней памяти телефона (sdcard0).</string>
    <string name="android_version30_rescription">Внимание! Текущая версия Android не позволяет сохранить файл. Обратитесь к разработчику handy@list.ru</string>
    <string name="no_data_for_download">Нет данных для выгрузки в файл</string>
    <string name="should_be_xls">Экселевский файл должен быть с расширением \'xls\'</string>
    <string name="shouldnt_be_xls">Текстовый файл не должен быть с расширением \'xls\'</string>
    <string name="choose_category">Выбрать категорию</string>
    <string name="choose_category_and_upload_file">Выбрать категорию и выгрузить файл</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="delete_category_words">Удалить слова выбранных категорий?</string>
    <string name="delete_word">Удалить выбранное слово?</string>
    <string name="choose_all_categories">выбрать все категории</string>
    <string name="chose">выбрано</string>
    <string name="category">категория:</string>
    <string name="ofWords">Слов</string>
    <string name="right">Верно</string>
    <string name="wrong">Не верно</string>
    <string name="learned">Изучено</string>
    <string name="from"> из </string>
    <string name="ok">OK</string>
    <string name="english">Aнглийский</string>
    <string name="russian">Русский</string>
    <string name="translate_direct">Направление перевода:</string>
    <string name="change_transl_dir">Сменить направление перевода</string>
    <string name="show_words">Показывать слова:</string>
    <string name="by_start_letters">по начальным буквам</string>
    <string name="by_any_letters">по буквам в любой части слова</string>
    <string name="learning_words">Какие слова учить:</string>
    <string name="englishs">Aнглийские</string>
    <string name="russians">Русские</string>
    <string name="show_transcr">Показывать транскрипцию</string>
    <string name="not_show_transcr">Не показывать транскрипцию</string>
    <string name="show_dont_know">Показывать кнопку \'Не знаю\'</string>
    <string name="not_show_dont_know">Не показывать кнопку \'Не знаю\'</string>
    <string name="speak_eng_word">Автоматически озвучивать англ. слово</string>
    <string name="clear_history">Очистить историю</string>
    <string name="renew_lesson">Обновить урок</string>
    <string name="renew_current_lesson">Сбросить текущий урок и начать его заново?</string>
    <string name="about">О программе</string>
    <string name="exit">Выход</string>
    <string name="show_history">показывать последние просмотренные слова, когда строка поиска пустая</string>
    <string name="no_last_query">Нет последних запросов</string>
    <string name="last_query">Последние запросы</string>
    <string name="no_category">Нужно выбрать категорию</string>
    <string name="no_wrong_words">Нет неправильно отгаданных слов!</string>
    <string name="wrong_words">Не отгаданные слова</string>
    <string name="right_words">Отгаданные слова</string>
    <string name="category_words_list">Слова категории</string>
    <string name="berries">ягоды</string>
    <string name="amount_words">Количество слов для выбора</string>
    <string name="thank_you">Спасибо за вашу поддержку!</string>
    <string name="title_thanks">Благодарность</string>
    <string name="switch_off_advertisement">Отключить рекламу</string>
    <string name="no_advertisement_forever">Отключить рекламу навсегда за 249 руб.</string>
    <string name="rub">руб</string>
    <string name="text_for_donate">Если вам понравилось приложение, вы можете поддержать разработчика небольшим взносом:</string>
    <string name="donate">Поддержать</string>
    <string name="evaluate">Оценить</string>
    <string name="text_for_evaluate1">и (или) оценить приложение в Google Play:</string>
    <string name="text_for_evaluate2">Оцените, пожалуйста, приложение в Google Play:</string>
    <string name="donate_developer">Поддержите разработчика!</string>
    <string name="attention">Внимание</string>
    <string name="other">прочее</string>
    <string name="change_background">Поменять фон</string>
    <string name="buy_paid_features">Купить платные функции?</string>
    <string name="buying_is_allowed">Приобретение платного контента позволяет:</string>
    <string name="no_advertisement">- убрать рекламу;</string>
    <string name="see_statistics">- посмотреть статистику и запускать уроки со словами с ранее сделанными ошибками;</string>
    <string name="unlimited_downloads">- загружать неограниченное количество слов из файлов;</string>
    <string name="change_background2">- изменять цвет фона приложения.</string>
    <string name="other_learning_type">- использовать другие способы обучения: написание слов и комплексное обучение;</string>
    <string name="change_language">- менять направление обучения с английкого на русский;</string>
    <string name="change_amount_words">- изменять количество слов для выбора при отгадывании слов.</string>
    <string name="pay_information">По умолчанию из файла можно загрузить не более 10 слов. Для безлимитной загрузки слов нужно внести небольшую плату 99 руб.</string>
    <string name="pay">Оплатить</string>
    <string name="right_answers">"Верные ответы: "</string>
    <string name="wrong_answers">"Неверные ответы: "</string>
    <string name="right_answer">Верный ответ</string>
    <string name="wrong_answer">"Неверный ответ"</string>
    <string name="no_wrong_answers">Нет неверных ответов ни в одной категории</string>
    <string name="learning_with_mistakes">Обучение только по словам с ошибками</string>
    <string name="learning_with_all">Обучение со всеми словами</string>
    <string name="statistics">Статистика</string>
    <string name="reset_statistics">Сбросить статистику</string>
    <string name="reset_stat_chosen_cats">Сбросить статистику по выбранным категориям?</string>
    <string name="reset_stat_all_cats">Сбросить статистику по всем категориям?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="learning_type">Тип обучения:</string>
    <string name="choice_learning">Выбор верного варианта</string>
    <string name="write_learning">Написание слова</string>
    <string name="complex_learning">Комплексное обучение</string>
    <string name="complex_description">" (по каждому слову последоват-но: выбор варианта из рус. перевода, выбор варианта из англ. перевода, написание англ. перевода)"</string>
    <string name="repeats_amount">Количество повторений последоват-тей в комплексном обучении</string>
    <string name="inter_translate">Введите перевод слова</string>
    <string name="dont_know">Не знаю</string>
    <string name="hint_dont_know">Через статистику можно запускать уроки только с неотгаданными словами</string>
    <string name="already_know">Уже знаю</string>
    <string name="hint_know">Если слово известно, можно не проходить все стадии комплексного обучения</string>
    <string name="further">Далее</string>
    <string name="check">Проверить</string>
    <string name="wrong_right_answer">Неправильно, верный ответ</string>
    <string name="need_category">Нужно выбрать хотя бы одну категорию</string>
    <string name="accessibility_overflow">Фон кнопки overflow и  других кнопок в тулбаре</string>
    <string name="add_new_word">Добавление нового слова</string>
    <string name="read_words">Какую озвучку слов применять:</string>
    <string name="us">Американский английский</string>
    <string name="uk">Британский аглийский</string>
    <string name="buy">Купить</string>
    <string name="try_7day_free">Попробовать 7 дней бесплатно</string>
    <string name="aready_purchased">Товар уже приобретен. Повторная покупка не возможна</string>
    <string name="pay_service_disconnected">Нет связи с сервисом покупки</string>
    <string name="purchase_error">Ошибка покупки товара</string>
    <string name="paid">Оплачено</string>
    <string name="not_paid">Не оплачено</string>
    <string name="learning_speak">Озвучивать слово</string>
    <string name="not_learning_speak">Не озвучивать слово</string>
    <string name="learning_eng_words">Англ. слова</string>
    <string name="learning_rus_words">Рус. слова</string>
</resources>