<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_image"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/fdLinearLayoutList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#00000000"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fdLinearLayoutSelect"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#00000000"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fdButtonNew"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:text="@string/nnew"/>

                    <Button
                        android:id="@+id/fdButtonSelect"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:text="@string/select"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fdLinearLayoutCreate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/textViewFilename"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/file_name" />

                <EditText
                    android:id="@+id/fdEditTextFile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text=""/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#00000000"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fdButtonCancel"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:text="@string/cancel"/>

                    <Button
                        android:id="@+id/fdButtonCreate"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:text="@string/create"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/fdLinearLayoutList"
            android:background="#00000000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/path"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00000000" />

            <ListView
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#00000000" />

            <TextView
                android:id="@android:id/empty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#00000000"
                android:text="@string/no_data" />
        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>